# NewToLLM

./: .gitignore  CMakeLists.txt  ReadMe.md  main.py  toy_instruction_eval.py
cpp_impl/: CMakeLists.txt
cpp_impl/my_torch/: CMakeLists.txt  my_torch.h  my_torch_export.h
cpp_impl/my_torch/brief/: torch_breif.cpp
cpp_impl/my_torch/fine_tuning/: fine_tuning_classify.cpp  fine_tuning_classify.h  torch_fine_tuning.cpp
cpp_impl/my_torch/load_model/: torch_load_model.cpp
cpp_impl/my_torch/toy_model/: config.h  model.cpp  model.h  torch_toy_model.cpp  transformer.cpp  transformer.h
cpp_impl/my_torch/train/: data_utils.cpp  data_utils.h  torch_train.cpp
cpp_impl/my_torch/utils/: torch_utils.cpp  torch_utils.h
cpp_impl/my_torch/verifier/: torch_verifier.cpp
cpp_impl/sandbox/: CMakeLists.txt  main.cpp
python_impl/basic/: torch_brief.py
python_impl/fine_tuning/: fine_tuning_classify.py  fine_tuning_instruction.py  fine_tuninig_instruction.py  torch_fine_tuning.py  utils.py
python_impl/load_model/: torch_load_model.py
python_impl/toy_model/: config.py  model.py  torch_toy_model.py  transformer.py
python_impl/train/: data_utils.py  torch_train.py
python_impl/utils/: torch_utils.py
python_impl/verifier/: torch_verifier.py
